# DriverLessCarChallenge

./: LICENSE  README.md
arduino/: README.txt
arduino/docs/: basics_about_control_engine_in_fdc_main.txt
arduino/docs/communication_protocol/: 1_change_arduino_mode.signalling  2_test_button.signalling  3_test_esc.signalling  4_test_encoder.signalling  5_test_sonar.signalling  6_messages_from_arduino_in_run_mode.signalling  7_set_speed_in_run_mode.signalling
arduino/fdc_main/: fdc_cfg.h  fdc_main.ino  processSerialInput.cpp
arduino/fdc_main_w_pid/: fdc_cfg.h  fdc_main_w_pid.ino  fdc_pid.cpp  fdc_pid.h  processSerialInput.cpp  processSerialInput.h
jetson/carControl/: README.md
jetson/carControl/src/: 12s_ko_vat_can_automaticCar.cpp  CMakeLists.txt~  cascade.xml  cmake_install.cmake
jetson/carControl/src/0.3/: 12s_ko_vat_can_automaticCar.cpp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt_old  Makefile  cascade.xml  thetaLog.txt
jetson/carControl/src/0.3/HAL/: CMakeLists.txt  HAL  Hal.cpp~  Hal.h~  Makefile  cmake_install.cmake  test.cpp
jetson/carControl/src/0.3/ObjectDetection/: CMakeLists.txt  Makefile  SignDetection.cpp  SignDetection.cpp~  cmake_install.cmake
jetson/carControl/src/0.3/ObjectRecognition/: CMakeLists.txt  Dict.txt  Makefile  README.md  SignProc.cpp  SignProc.h  SignRecognition.cpp  SignRecognition.cpp~  SignRecognition.h  VectorL.txt  VectorVDict.txt  cmake_install.cmake
jetson/carControl/src/0.3/dlib/: Makefile  cmake_install.cmake
jetson/carControl/src/0.3/dlib/dlib/: Makefile  cmake_install.cmake
jetson/carControl/src/0.3/extract_info/: CMakeLists.txt  Makefile  cmake_install.cmake  extractInfo.cpp  extractInfo.h  test_extract_info.cpp
jetson/carControl/src/0.3/include/: LineModel.hpp  LineModel.hpp~
jetson/carControl/src/0.3/lane_detection/: .api_lane_detection.cpp.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  api_lane_detection.cpp  api_lane_detection.cpp~  api_lane_detection.h  api_lane_detection.h~  cmake_install.cmake  test-vanishing-point  test_lane_detection.cpp
jetson/carControl/src/0.3/lane_detection/tracking/: CMakeLists.txt  COpticalFlowTracker.cpp  COpticalFlowTracker.h  CVehicleCounter.cpp  CVehicleCounter.h  CVehicleDetector.cpp  CVehicleDetector.h  Param.h  def.h  def_cam.h  def_vid.h  hungarian.cpp  hungarian.h  resource.h
jetson/carControl/src/0.3/main_pid/: Radon.cpp  Radon.h  Singleton.h  Untitled Document  automaticCar.cpp  automaticCar.cpp~  checkUart.cpp  runStraight.cpp  runStraight.cpp~  test-steering-coef.cpp  testSignRecognition.cpp  testSignRecognition.cpp~  vision_test-backup.cpp  vision_test.cpp  vision_test.cpp~  vision_test_huynh.cpp  vision_test_tien.cpp
jetson/carControl/src/0.3/multilane/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  multilane.cpp  multilane.h  test_multilane.cpp
jetson/carControl/src/0.3/openni2/: .openni2.cpp.swp  .openni2.h.swp  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  openni2.cpp  openni2.cpp~  openni2.h
jetson/carControl/src/0.3/peripheral_driver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
jetson/carControl/src/0.3/peripheral_driver/i2c/: CMakeCache.txt  CMakeLists.txt~  Makefile  api_i2c_pwm.cpp~  api_i2c_pwm.h  api_i2c_pwm.h~  cmake_install.cmake  pca9685.cpp  pca9685.h~  test_steering_throttle.cpp
jetson/carControl/src/0.3/peripheral_driver/uart/: CMakeLists.txt~  Makefile  api_uart.cpp  api_uart.h  cmake_install.cmake  demo_tx_rx.c  rs232.c  rs232.c~  rs232.h  test-uart  test_uart.cpp  test_uart1.cpp  test_uart2.cpp
jetson/carControl/src/0.3/radon/: .radon.h.swp  .test_radon.cpp.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  radon.cpp  radon.h  radon.h~  test_radon  test_radon.cpp
jetson/carControl/src/0.3/sign_detection/: CMakeLists.txt  CMakeLists.txt~  Makefile  SignDetection.cpp  SignDetection.cpp~  SignDetection.h  Singleton.h~  cmake_install.cmake
jetson/carControl/src/0.3/sign_detection/include/common/: Singleton.h~
jetson/carControl/src/0.3/sign_detection/include/openni2/: OpenNI2.h
jetson/carControl/src/0.3/sign_recognize/: .signsRecognizer.cpp.swp  .signsRecognizer.h.swp  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  signsRecognizer.cpp  signsRecognizer.h
jetson/carControl/src/0.3/stereo_vision/: Makefile  api_kinect_cv.cpp  api_kinect_cv.h  cmake_install.cmake  test_kinect_cv2.cpp  test_kinect_cv2_2.cpp
(+4 files in other folders)
